Correct overlapping of line

--- a/components/timeline/styles.css
+++ b/components/timeline/styles.css
@@ -45,7 +45,7 @@
 .timeLineItemDeco::before {
   content: '';
   position: absolute;
-  top: 0;
+  top: -1px;
   left: 2px;
   width: 12px;
   height: 12px;
